Fix table size and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -66,11 +66,6 @@ span.badge {
   display: inline-block;
 }
 
-#table table {
-  display: block;
-  overflow-x: auto;
-}
-
 #table > form {
   margin-top: 1em;
   margin-bottom: 0;
